# .challenge.processo-seletivo-math

./: .gitignore  LICENSE  README.md  code.ipynb  pyproject.toml
