[tool.poetry]
name = "challenge-processo-seletivo-math"
version = "0.1.0"
description = ""
authors = ["Mateus Balda <mateusbalda89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
